--- a/examples/flux-chat/index.html
+++ b/examples/flux-chat/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Flux • Chat</title>
+  <link href="http://fonts.googleapis.com/css?family=Muli" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="./chatapp.css">
 </head>
 
 <body>
